feedback session, edited all commented files