@@ -10,8 +10,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,37 +23,36 @@ public class OrderService {
     @Transactional
     public ShopOrder createOrder(OrderRequestDTO orderRequest) {
         ShopOrder order = new ShopOrder();
+        
+        if (orderRequest.getPublicId() != null) {
+            order.setPublicId(orderRequest.getPublicId());
+        }
 
         List<OrderItem> items = orderRequest.getItems().stream().map(dto -> {
             
-            // 1. Produkt suchen
             Product product = productRepository.findProductByPublicId(dto.getProductId())
                     .orElseThrow(() -> new IllegalArgumentException("Produkt nicht gefunden!"));
 
-            // 2. Sicherheits-Check - Haben wir genug auf Lager?
             if (product.getAmountInStock() < dto.getQuantity()) {
                 throw new IllegalArgumentException("Nicht genug auf Lager für Produkt: " + product.getName());
             }
 
-            // 3. Lagerbestand abziehen
             product.setAmountInStock(product.getAmountInStock() - dto.getQuantity());
-            
-            // 4. Produkt sofort speichern
             productRepository.save(product);
 
-            // 5. Bestellposition bauen
-            return OrderItem.builder()
-                    .shopOrder(order)
-                    .product(product)
-                    .productNameAtPurchase(product.getName())
-                    .priceAtPurchase(BigDecimal.valueOf(product.getPrice())) 
-                    .quantity(dto.getQuantity())
-                    .build();
-        }).toList();
+            OrderItem item = new OrderItem();
+            item.setShopOrder(order);
+            item.setProductId(product.getProductId());
+            item.setProductPublicId(product.getPublicId());
+            item.setProductNameAtPurchase(product.getName());
+            item.setPriceAtPurchase(product.getPrice());
+            item.setQuantity(dto.getQuantity());
+            
+            return item;
+        }).collect(Collectors.toList()); 
 
         order.setItems(items);
-        
-        // 6. Bestellung abspeichern
+
         return orderRepository.save(order);
     }
 }
